--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -84,6 +84,10 @@ body.dark-mode li {
     color: #fff;
 }
 
+body.dark-mode .card-content h3 {
+    color: #fff !important;
+}
+
 
 body.dark-mode h4.timeline-date-aa {
     color: #fff;
@@ -348,13 +352,11 @@ body.dark-mode .wbnrfz-works.floating-cards {
 }
 
 body.dark-mode .wbnrfz-works.floating-cards::before {
-    background: linear-gradient(
-        to bottom,
-        rgba(0, 0, 0, 0) 0%,
-        rgba(0, 0, 0, 0.15) 15%,
-        rgba(0, 0, 0, 0.25) 50%,
-        rgba(0, 0, 0, 0.3) 100%
-    );
+    background: linear-gradient(to bottom,
+            rgba(0, 0, 0, 0) 0%,
+            rgba(0, 0, 0, 0.15) 15%,
+            rgba(0, 0, 0, 0.25) 50%,
+            rgba(0, 0, 0, 0.3) 100%);
 }
 
 body.dark-mode .ftco-section-blog {
@@ -389,7 +391,7 @@ body.dark-mode .card {
 
 body.dark-mode .card-content {
     background: #1a1f35be;
-    backdrop-filter: blur(25px);
+    /* backdrop-filter: blur(25px); */
 }
 
 /* ------------------------------------------ */
