--- a/css/style.css
+++ b/css/style.css
@@ -1304,9 +1304,10 @@ h4.timeline-date-aa {
     right: 0;
     min-height: 100px;
     padding: 20px 20px 20px;
-    text-align: center;
+    text-align: left;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     justify-content: center;
 }
 
