--- a/css/style.css
+++ b/css/style.css
@@ -926,7 +926,7 @@ header {
     position: relative;
     z-index: 1;
     margin-top: 50px;
-    min-height: 280px;
+    min-height: 180px;
     display: flex;
     flex-direction: column;
 }
@@ -2557,7 +2557,6 @@ li.breadcrumb-item.active a:hover {
     border-radius: 20px;
     margin-bottom: 2em;
     margin-top: 2em;
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 .banner {
@@ -2569,10 +2568,10 @@ h2.page-title {
     color: #000;
 }
 
-.cp-img {
+/* .cp-img {
     border-radius: 20px;
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(255, 255, 255, 0.2);
-}
+} */
 
 .ps-img {
     border-radius: 20px;
