--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -1553,7 +1553,7 @@
 @media (max-width: 499px) {
     .wbnrfz-grid {
         grid-template-columns: repeat(1, 1fr);
-        
+
     }
 }
 
@@ -1584,5 +1584,19 @@
 
     .wbnrfz-works.floating-cards::before {
         margin-top: -3em;
+    }
+}
+
+
+
+@media (min-width: 1100px) and (max-width: 1199px) {
+    .container {
+        max-width: 100vw !important;
+    }
+}
+
+@media (min-width: 900px) and (max-width: 1099px) {
+    .container {
+        max-width: 800px !important;
     }
 }
