--- a/css/style.css
+++ b/css/style.css
@@ -1238,7 +1238,7 @@ h4.timeline-date-aa {
 }
 
 .wbnrfz-works.floating-cards {
-    margin-top: -288px;
+    margin-top: -250px;
     padding-top: 50px;
     padding-bottom: 60px;
     position: relative;
@@ -1286,10 +1286,10 @@ h4.timeline-date-aa {
     display: flex;
     flex-direction: column;
     cursor: pointer;
-    min-height: 300px;
+    aspect-ratio: 4 / 4;
 }
 
-/* .wbnrfz-works.floating-cards .card::before {
+.wbnrfz-works.floating-cards .card::before {
     content: '';
     position: absolute;
     top: -10px;
@@ -1299,23 +1299,23 @@ h4.timeline-date-aa {
     background: var(--card-bg) center / cover no-repeat;
     filter: blur(15px) brightness(0.9);
     z-index: 0;
-} */
-
-.wbnrfz-works.floating-cards .card img {
-    width: 100%;
-    height: auto;
-    display: block;
-    object-fit: contain;
 }
 
 /* .wbnrfz-works.floating-cards .card img {
     width: 100%;
-    height: 100%;
+    height: auto;
+    display: block;
     object-fit: contain;
+} */
+
+.wbnrfz-works.floating-cards .card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     position: absolute;
     top: 0;
     left: 0;
-} */
+}
 
 .wbnrfz-works.floating-cards .card .card-content {
     position: absolute !important;
