--- a/css/style-mobNav.css
+++ b/css/style-mobNav.css
@@ -11,7 +11,7 @@ body.dark-mode .page-header-section {
 }
 
 .nav-link.active {
-    background-image: linear-gradient(to right, #8f1211, #962f14, #9c4519, #a15722, #a6692e); !important;
+    background-image: linear-gradient(to right, #8f1211, #962f14, #9c4519, #a15722, #a6692e) !important;
 }
 
 .mobile-bottom-nav,
